--- a/src/index.css
+++ b/src/index.css
@@ -138,8 +138,10 @@ main {
 }
 
 .server img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
-  height: 50%;
 }
 
 /* ------------------------------------------------------ */
