--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,7 @@ main {
 /* -- SERVERS -- */
 
 .server {
-  background-color: #fff;
+  background-color: var(--clr-white);
 
   width: 60px;
   height: 60px;
@@ -134,7 +134,7 @@ main {
 }
 
 .server:hover {
-  background-color: var(--clr-blue);
+  background-color: var(--clr-white);
 }
 
 .server img {
