--- a/src/index.css
+++ b/src/index.css
@@ -348,19 +348,53 @@ main {
 /* ------------------------------------------------------ */
 /* -- User List -- */
 
-.container {
-  width: 200px;
+.UserList {
   height: 100%;
-  background-color: #f2f2f2;
-  padding: 20px;
+  overflow-y: scroll;
+  padding: 15px;
+  background-color: #36393f;
+  width: 250px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
-.userList {
+.UserList h2 {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.UserList ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.userList li {
+.UserList li {
   margin-bottom: 10px;
+}
+
+.UserList li span {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.UserList li .user-avatar {
+  background-color: #7289da;
+  border-radius: 50%;
+  display: inline-block;
+  height: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+  width: 30px;
+}
+
+.UserList li .user-name {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  vertical-align: middle;
 }
