--- a/src/index.css
+++ b/src/index.css
@@ -349,26 +349,25 @@ main {
 /* -- User List -- */
 
 .user-list {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 200px;
-  padding: 20px;
-  background-color: var(--clr-secondary);
-  overflow-y: auto;
-  scrollbar-width: none; /* hide scrollbar for Firefox */
-  -ms-overflow-style: none; /* hide scrollbar for IE and Edge */
-}
+  grid-column: 3/4;
 
-.user-list::-webkit-scrollbar {
-  width: 0px; /* hide scrollbar for Chrome, Safari, and Opera */
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: column;
+  padding-top: 40px;
 }
 
 .user {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  cursor: pointer;
+  transition: 250ms ease all;
+}
+
+.user:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .user img {
@@ -378,8 +377,11 @@ main {
   margin-right: 10px;
 }
 
-.user p {
-  margin: 0;
+.user .address {
   color: var(--clr-white);
   font-size: 14px;
+  font-weight: 600;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
