--- a/src/index.css
+++ b/src/index.css
@@ -349,39 +349,40 @@ main {
 /* -- User List -- */
 
 .UserList {
-  grid-column: 3/4;
-
+  position: fixed;
+  top: 80px;
+  right: 0;
+  bottom: 0;
+  width: 250px;
+  background-color: var(--clr-dark-200);
+  color: var(--clr-white);
+  font-size: 14px;
+  overflow-y: scroll;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
   flex-direction: column;
-  padding-top: 40px;
 }
 
-.UserList {
+.UserList .user {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  padding: 12px;
   cursor: pointer;
   transition: 250ms ease all;
 }
 
-.UserList:hover {
-  background-color: rgba(255, 255, 255, 0.3);
+.UserList .user:hover {
+  background-color: var(--clr-dark-100);
 }
 
-.UserList img {
-  width: 30px;
-  height: 30px;
+.UserList .user .user-avatar {
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
-  margin-right: 10px;
+  margin-right: 12px;
 }
 
-.UserList .address {
-  color: var(--clr-white);
-  font-size: 14px;
-  font-weight: 600;
-  text-overflow: ellipsis;
+.UserList .user .user-address {
   overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
